--- a/getting.started/CMakeLists.txt
+++ b/getting.started/CMakeLists.txt
@@ -1,3 +1,5 @@
 project("getting started")
 
 add_executable(add add.cpp)
+add_executable(whilecount whilecount.cpp)
+add_executable(forcount forcount.cpp)
