--- a/getting.started/CMakeLists.txt
+++ b/getting.started/CMakeLists.txt
@@ -3,3 +3,4 @@ project("getting started")
 add_executable(add add.cpp)
 add_executable(whilecount whilecount.cpp)
 add_executable(forcount forcount.cpp)
+add_executable(mysum mysum.cpp)
