[cplusplusprimer] if statement

--- a/getting.started/CMakeLists.txt
+++ b/getting.started/CMakeLists.txt
@@ -4,3 +4,4 @@ add_executable(add add.cpp)
 add_executable(whilecount whilecount.cpp)
 add_executable(forcount forcount.cpp)
 add_executable(mysum mysum.cpp)
+add_executable(occurs occurs.cpp)
