--- a/variables.and.basic.type/CMakeLists.txt
+++ b/variables.and.basic.type/CMakeLists.txt
@@ -4,3 +4,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")
 
 add_executable(convs convs.cpp)
 add_executable(escape escape.cpp)
+add_executable(inits inits.cpp)
