[cplusplusprimer] references example

--- a/variables.and.basic.type/CMakeLists.txt
+++ b/variables.and.basic.type/CMakeLists.txt
@@ -6,3 +6,4 @@ add_executable(convs convs.cpp)
 add_executable(escape escape.cpp)
 add_executable(inits inits.cpp)
 add_executable(literals literals.cpp)
+add_executable(ref-ex ref-ex.cpp)
