[cplusplusprimer] unsigned conversation

--- a/variables.and.basic.type/CMakeLists.txt
+++ b/variables.and.basic.type/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(escape escape.cpp)
 add_executable(inits inits.cpp)
 add_executable(literals literals.cpp)
 add_executable(ref-ex ref-ex.cpp)
+add_executable(unsigned unsigned.cpp)
