[cplusplusprimer] scope levels example

--- a/variables.and.basic.type/CMakeLists.txt
+++ b/variables.and.basic.type/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(inits inits.cpp)
 add_executable(literals literals.cpp)
 add_executable(ref-ex ref-ex.cpp)
 add_executable(unsigned unsigned.cpp)
+add_executable(scope_levels scope_levels.cpp)
