--- a/variables.and.basic.type/CMakeLists.txt
+++ b/variables.and.basic.type/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(ref-ex ref-ex.cpp)
 add_executable(unsigned unsigned.cpp)
 add_executable(scope_levels scope_levels.cpp)
 add_executable(decl-ex decl-ex.cpp)
+add_executable(dbl-ptr dbl-ptr.cpp)
