[cplusplusprimer] compound declare

--- a/variables.and.basic.type/CMakeLists.txt
+++ b/variables.and.basic.type/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(unsigned unsigned.cpp)
 add_executable(scope_levels scope_levels.cpp)
 add_executable(decl-ex decl-ex.cpp)
 add_executable(dbl-ptr dbl-ptr.cpp)
+add_executable(compounddecls compounddecls.cpp)
