[cplusplusprimer] strings vectors and arrays

--- a/strings.vectors.and.arrays/CMakeLists.txt
+++ b/strings.vectors.and.arrays/CMakeLists.txt
@@ -10,13 +10,18 @@ add_executable(string_io2 string_io2.cpp)
 add_executable(string_size string_size.cpp)
 add_executable(string_size2 string_size2.cpp)
 add_executable(string_size3 string_size3.cpp)
+add_executable(cstring_hdr cstring_hdr.cpp)
+add_executable(char_repl char_repl.cpp)
 add_executable(word_echo word_echo.cpp)
 add_executable(getline getline.cpp)
 add_executable(cctype cctype.cpp)
 add_executable(hexify hexify.cpp)
 add_executable(vec_decls vec_decls.cpp)
+add_executable(square square.cpp)
 add_executable(vecStrings2 vecStrings2.cpp)
 add_executable(vecScores vecScores.cpp)
 add_executable(vecSubs vecSubs.cpp)
 add_executable(arrayScores arrayScores.cpp)
+add_executable(ptr_traversal2 ptr_traversal2.cpp)
+add_executable(multidim multidim.cpp)
 
