--- a/functions/CMakeLists.txt
+++ b/functions/CMakeLists.txt
@@ -4,3 +4,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")
 #include_directories(../getting.started)
 
 add_executable(fact fact.cpp LocalMath.cpp LocalMath.h)
+add_executable(reset reset.cpp)
