--- a/the.io.library/CMakeLists.txt
+++ b/the.io.library/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project("classes")
+project("the.io.library")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")
 include_directories(../classes)
