--- a/functions/CMakeLists.txt
+++ b/functions/CMakeLists.txt
@@ -1,4 +1,4 @@
-project("expressions")
+project("functions")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")
 #include_directories(../getting.started)
