--- a/generic.algorithms/CMakeLists.txt
+++ b/generic.algorithms/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")
 add_executable(absInt absInt.cpp)
 add_executable(accum accum.cpp)
 add_executable(accum4 accum4.cpp)
+add_executable(avg_price avg_price.cpp)
 add_executable(bind2 bind2.cpp)
 add_executable(elimDups elimDups.cpp)
 add_executable(equal equal.cpp)
