--- a/dynamic.memory/CMakeLists.txt
+++ b/dynamic.memory/CMakeLists.txt
@@ -9,3 +9,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")
 add_executable(allocPtr allocPtr.cpp)
 add_executable(allocSP allocSP.cpp)
 add_executable(oknew oknew.cpp)
+add_executable(usealloc usealloc.cpp)
