[cplusplusprimer] dynamic memory

--- a/dynamic.memory/CMakeLists.txt
+++ b/dynamic.memory/CMakeLists.txt
@@ -10,3 +10,9 @@ add_executable(allocPtr allocPtr.cpp)
 add_executable(allocSP allocSP.cpp)
 add_executable(oknew oknew.cpp)
 add_executable(usealloc usealloc.cpp)
+add_executable(usealloc2 usealloc2.cpp)
+add_executable(release release.cpp)
+add_executable(unique unique.cpp)
+add_executable(up up.cpp)
+add_executable(useBlob useBlob.cpp)
+add_executable(weak weak.cpp)
