[cplusplusprimer] dynamic memory

--- a/dynamic.memory/CMakeLists.txt
+++ b/dynamic.memory/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 project("dynamic.memory")
 
-#include_directories(../functions)
+include_directories(../functions)
 #include_directories(../getting.started)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")
@@ -16,3 +16,4 @@ add_executable(unique unique.cpp)
 add_executable(up up.cpp)
 add_executable(useBlob useBlob.cpp)
 add_executable(weak weak.cpp)
+add_executable(querymain querymain.cpp TextQuery.cpp)
