[cplusplusprimer] copy control

--- a/copy.control/CMakeLists.txt
+++ b/copy.control/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(FolderMain FolderMain.cpp Folder.cpp)
 add_executable(HasPtrUseCount HasPtrUseCount.cpp)
 add_executable(HasPtrValueLike HasPtrValueLike.cpp)
 add_executable(moveHP moveHP.cpp)
+add_executable(serial serial.cpp)
+add_executable(StrFolderMain StrFolderMain.cpp StrFolder.cpp String.cpp)
