[cplusplusprimer] copy control

--- a/copy.control/CMakeLists.txt
+++ b/copy.control/CMakeLists.txt
@@ -10,3 +10,5 @@ add_executable(HasPtrValueLike HasPtrValueLike.cpp)
 add_executable(moveHP moveHP.cpp)
 add_executable(serial serial.cpp)
 add_executable(StrFolderMain StrFolderMain.cpp StrFolder.cpp String.cpp)
+add_executable(useStrVec useStrVec.cpp StrVec.cpp)
+add_executable(substr substr.cpp)
